src/app.scss
$phone-width: 400px;

body {
  margin: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: #000;
  position: relative;
  font-family: Helvetica, Arial, sans-serif;
}

#renderCanvas {
  width: 100vw;
  height: 100vh;
}

#blocker {
  overflow: hidden;
  position: absolute;
  z-index: 99;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(#000000, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
}

#landing-cta {
  text-align: center;
}

#subvirtual {
  position: relative;
  width: 100%;
  height: 100%;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

